dark mode works initially need to fix style details

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
-body {
+/*body {
     background-color: transparent;
+}*/
+
+body.light-mode {
+    --text-color: #222;
+    --bkg-color: #fff;
+    --btn-txt-color: white;
+    --btn-bg-color: rgb(11, 88, 160);
+}
+
+body.dark-mode {
+    --text-color: #eee;
+    --bkg-color: #252222;
+    --btn-txt-color: rgb(46, 43, 43);
+    --btn-bg-color: rgb(20, 211, 195);
+}
+
+body {
+    background-color: var(--bkg-color);
+    color: var(--text-color);
 }
